[package]
name = "eucalypt"
version = "0.2.0"
authors = ["gmorpheme <github@gmorpheme.net>"]
edition = "2018"

[build-dependencies]
lalrpop = { version = "0.19.6", features = ["lexer"] }

[dev-dependencies]
criterion = "0.3.5"

[dependencies]
regex = "1.5.4"
matches = "0.1.9"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
lalrpop-util = "0.19.6"
serde_json = "1.0.72"
yaml-rust = { git = "https://github.com/curvelogic/yaml-rust", rev = "e3a9b432c43fcf9a19f1836657091caf7ae3b15f" }
unic-ucd-category = "0.9.0"
itertools = "0.10.1"
thiserror = "1.0.30"
structopt = "0.3.25"
url = "2.2.2"
pretty = "0.10.0"
moniker = { git = "https://github.com/curvelogic/moniker", rev = "c620b2a69d6cad4724cba07775ed65a7ae556c9c" }
indexmap = "1.7.0"
petgraph = "0.6.0"
atty = "0.2"
csv = "1.1.6"
lazy_static = "1.4.0"
chrono = "0.4.19"
bitflags = "1.3.2"
quick-xml = "0.22.0"
chrono-tz = "0.6.0"
toml = { version = "0.5.8", features = ["preserve_order"] }
dirs = "3.0.2"
html5ever = "0.25.1"
lru = "0.7.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
webbrowser = "0.5.5"
bitmaps = "3.1.0"
pretty-hex = "0.2.1"

[[bench]]
harness = false
name = "alloc"
