[package]
name = "eucalypt"
version = "0.2.0"
authors = ["gmorpheme <github@gmorpheme.net>"]
edition = "2021"

[features]
default = []
# Enable comprehensive GC metrics collection in release builds
# WARNING: May impact performance - only enable for monitoring/debugging
gc-telemetry = []

[build-dependencies]

[dev-dependencies]
criterion = "0.4.0"

[dependencies]
regex = "1.6.0"
matches = "0.1.9"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
serde_json = "1.0.85"
yaml-rust = { git = "https://github.com/curvelogic/yaml-rust", rev = "e3a9b432c43fcf9a19f1836657091caf7ae3b15f" }
unic-ucd-category = "0.9.0"
itertools = "0.10.5"
thiserror = "1.0.37"
structopt = "0.3.25"
url = "2.3.1"
pretty = "0.11.3"
moniker = { git = "https://github.com/curvelogic/moniker", rev = "c620b2a69d6cad4724cba07775ed65a7ae556c9c" }
indexmap = "1.9.1"
petgraph = "0.6.2"
csv = "1.1.6"
lazy_static = "1.4.0"
chrono = "0.4.22"
bitflags = "1.3.2"
quick-xml = "0.25.0"
chrono-tz = "0.6.3"
toml = { version = "0.5.9", features = ["preserve_order"] }
dirs = "4.0.0"
html5ever = "0.26.0"
lru = "0.8.1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
webbrowser = "0.8.0"
bitmaps = "3.2.0"
pretty-hex = "0.3.0"
edn-format = "3.2.3"
ordered-float = "2.10.0"
rowan = "0.15.3"

[[bench]]
harness = false
name = "benches"
