[package]
name = "eucalypt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
eucalypt = { path = ".." }
codespan-reporting = "0.11.1"

# Prevent this from interfering with workspaces
[workspace]

[[bin]]
name = "fuzz_type_dsl"
path = "fuzz_targets/fuzz_type_dsl.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_loader"
path = "fuzz_targets/fuzz_loader.rs"
test = false
doc = false
